<resources>
    <string name="random">random</string>
    <!--Logowanie i rejestracja-->

    <string name="app_name">Expense Tracker App</string>
    <string name="signin">Sign In</string>
    <string name="login">Log In</string>
    <string name="username">Username:</string>
    <string name="password">Password:</string>
    <string name="dont_have_account">Do not have an account? Sign up here!</string>
    <string name="forgot_password">Forgot the password?</string>
    <string name="register_button">Register now</string>
    <string name="already_have_account">Already have an account? Log in here!</string>
    <string name="title_activity_test">test</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="registration_activity">Register here</string>
    <!--Główne menu-->

    <string name="transaction">New expense</string>
    <string name="switch_to_calendar">Calendar</string>
    <string name="transaction_history">Transaction history</string>
    <string name="welcome_user">Welcome, Jakub!</string>
    <string name="total_balance">Total balance</string>

    <!--Navbar-->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_home_drawer">HomeDrawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Expense Tracker App</string>
    <string name="nav_header_subtitle">created for PAM </string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="nav_logout">Logout</string>
    <string name="nav_preferences">User preferences</string>
    <string name="nav_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="nav_about">About</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>


    <!--preferences-->
    <string name="confirm">Confirm</string>
    <string name="default_currency">PLN</string>
    <string name="defautl_date_format">dd/mm/yyyy</string>
    <string name="set_budget">Set your budget:</string>
    <string name="select_currency">Select currency:</string>
    <string name="reset">Reset</string>
    <string name="select_date_format">Select date format:</string>


    <!--home drawer-->
    <string name="home_drawer_bar">Expense Tracker App</string>
    <string name="open_menu">Open menu</string>
    <string name="close_menu">Close menu</string>
    <string name="home_main_menu">Main menu</string>
</resources>