<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_color"
    android:id="@+id/preferences_fragment"
    tools:context=".UserPreferencesActivity">

    <!-- The primary full-screen view. This can be replaced with whatever view
         is needed to present your content, e.g. VideoView, SurfaceView,
         TextureView, etc. -->

    <com.google.android.material.card.MaterialCardView
        android:layout_marginTop="30dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        app:cardCornerRadius="15dp"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/cardview_budget_expense_color">
        <LinearLayout
            android:layout_width="match_parent"

            android:gravity="center"
            android:baselineAligned="false"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    style="@style/ExpenseTrackerAppStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:text="@string/select_currency"
                    android:textSize="20sp"
                    android:textStyle="bold">

                </TextView>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:gravity="center"
                android:layout_weight="0.5">
                <EditText
                    android:layout_width="120dp"
                    android:importantForAutofill="no"
                    android:layout_height="48dp"
                    android:background="@drawable/rounded_edittext_background"
                    android:inputType="text"
                    android:hint="@string/default_currency"
                    android:gravity="center"
                    android:textAlignment="center"
                    android:textColorHint="@color/black"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    style="@style/ExpenseTrackerAppStyle"
                    android:textColor="@color/black"
                    android:textIsSelectable="true"
                    android:scrollbarAlwaysDrawVerticalTrack="true">

                </EditText>
            </LinearLayout>
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>
    <com.google.android.material.card.MaterialCardView
        android:layout_marginTop="100dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        app:cardCornerRadius="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/cardview_budget_expense_color">
    <LinearLayout
        android:layout_width="match_parent"

        android:gravity="center"
        android:baselineAligned="false"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                style="@style/ExpenseTrackerAppStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:text="@string/set_budget"
                android:textSize="20sp"
                android:textStyle="bold">

            </TextView>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:gravity="center"
            android:layout_weight="0.5">
            <EditText
                android:layout_width="120dp"
                android:importantForAutofill="no"
                android:layout_height="48dp"
                android:background="@drawable/rounded_edittext_background"
                android:inputType="number"
                android:hint="0"
                android:gravity="center"
                android:textAlignment="center"
                android:textColorHint="@color/black"
                android:textSize="18sp"
                android:textStyle="bold"
                style="@style/ExpenseTrackerAppStyle">

            </EditText>
        </LinearLayout>
    </LinearLayout>
    </com.google.android.material.card.MaterialCardView>
    <com.google.android.material.card.MaterialCardView
        android:layout_marginTop="170dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        app:cardCornerRadius="15dp"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/cardview_budget_expense_color">
        <LinearLayout
            android:layout_width="match_parent"

            android:gravity="center"
            android:baselineAligned="false"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.42"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    style="@style/ExpenseTrackerAppStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/select_date_format"
                    android:textSize="20sp"
                    android:textStyle="bold">

                </TextView>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:gravity="center"
                android:layout_weight="0.5">
                <EditText
                    android:layout_width="120dp"
                    android:importantForAutofill="no"
                    android:layout_height="48dp"

                    android:background="@drawable/rounded_edittext_background"
                    android:inputType="text"
                    android:hint="@string/defautl_date_format"
                    android:gravity="center"
                    android:textAlignment="center"
                    android:textColorHint="@color/black"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    style="@style/ExpenseTrackerAppStyle"

                    android:textIsSelectable="true"
                    android:scrollbarAlwaysDrawVerticalTrack="true">

                </EditText>
            </LinearLayout>
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>
    <Button
        android:id="@+id/button_confirm"
        style="@style/ExpenseTrackerAppStyle"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="15dp"
        android:textStyle="bold"
        android:textSize="17sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_grad_color"
        android:text="@string/confirm"
        android:layout_gravity="bottom|end"
        />
    <Button
        android:id="@+id/button_reset"
        style="@style/ExpenseTrackerAppStyle"
        android:textStyle="bold"
        android:textSize="17sp"
        android:layout_marginBottom="10dp"
        android:layout_marginStart="15dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_grad_color"
        android:text="@string/reset"
        android:layout_gravity="bottom|start"
        />

</FrameLayout>